# libappnet

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  README.md  TODO.md  aclocal.m4  appnet.pc.in  appnetclient.c  appnetclient.h  appnethttpprovider.c  appnethttpprovider.h  appnethttprequest.c  appnethttprequest.h  appnethttpresponse.c  appnethttpresponse.h  appnetpost.c  appnetpost.h  appnetsouphttpprovider.c  appnetsouphttpprovider.h  autogen  configure  configure.ac  libappnet.pc.in
appnet/: appnetclient.h  appnetpost.h
docs/reference/libappnet/: Makefile.am  Makefile.in  libappnet-docs.sgml  libappnet-docs.sgml.in  libappnet-sections.txt  libappnet.types
example/: Makefile.am  Makefile.in  example.c
libappnet/: Makefile.am  Makefile.in  appnetclient.c  appnethttpprovider.c  appnethttprequest.c  appnetparams.c  appnetpost.c  appnetsouphttpprovider.c
libappnet/appnet/: appnetclient.h  appnethttpprovider.h  appnethttprequest.h  appnethttpresponse.h  appnetparams.h  appnetpost-private.h  appnetpost.h  appnetsouphttpprovider.h
script/: make-appnet-h  release
test/: Makefile.am  Makefile.in  appnetstubhttpprovider.c  appnetstubhttpprovider.h  test_appnetclient  test_appnetclient.c  test_appnetparams.c
test/data/: appnetclient_add-post  appnetclient_timeline
