AC_INIT([libappnet],[0.0.1],[github@tomlee.co])
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([1.9 foreign])

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_LIBTOOL

MIN_GOBJECT_VERSION=2.30.0
MIN_LIBSOUP_VERSION=2.30.0
MIN_JANSSON_VERSION=2.3.0

PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES([GOBJECT],[gobject-2.0 >= $MIN_GOBJECT_VERSION],[],
                  [AC_MSG_ERROR([need gobject-2.0 >= $MIN_GOBJECT_VERSION])])
AC_SUBST([MIN_GOBJECT_VERSION])
AC_SUBST([GOBJECT_CFLAGS])
AC_SUBST([GOBJECT_LIBS])

PKG_CHECK_MODULES([LIBSOUP],[libsoup-2.4 >= $MIN_LIBSOUP_VERSION],[],
                  [AC_MSG_ERROR([need libsoup-2.4 >= $MIN_LIBSOUP_VERSION])])
AC_SUBST([MIN_LIBSOUP_VERSION])
AC_SUBST([LIBSOUP_CFLAGS])
AC_SUBST([LIBSOUP_LIBS])

PKG_CHECK_MODULES([JANSSON],[jansson >= $MIN_JANSSON_VERSION],[],
                  [AC_MSG_ERROR([need jansson >= $MIN_JANSSON_VERSION])])
AC_SUBST([MIN_JANSSON_VERSION])
AC_SUBST([JANSSON_CFLAGS])
AC_SUBST([JANSSON_LIBS])

AC_PROG_CC

AC_CONFIG_FILES([Makefile appnet.pc])

AC_OUTPUT

